--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "faucet": "^0.0.1",
     "rollup": "^0.59.4",
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-watch": "^4.3.1"
+    "rollup-watch": "^4.3.1",
+    "tape": "^4.9.0"
   },
   "scripts": {
     "build": "./node_modules/.bin/rollup -c",
-    "watch": "./node_modules/.bin/rollup -c -w"
+    "watch": "./node_modules/.bin/rollup -c -w",
+    "test": "tape -r babel-register ./test/**/**.js | faucet"
   },
   "dependencies": {
     "fastdom": "^1.0.8"
