--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
   "author": "Julien Etienne <j8@protonmail.ch>",
   "license": "MIT",
   "devDependencies": {
+    "azar": "^0.0.2",
     "babel-core": "^6.26.3",
+    "babel-preset-es2015-rollup": "^3.0.0",
+    "babel-register": "^6.26.0",
+    "browser-env": "^3.2.5",
+    "chai": "^4.1.2",
+    "express": "^4.16.3",
     "faucet": "^0.0.1",
+    "mocha": "^5.2.0",
     "rollup": "^0.59.4",
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.3",
@@ -17,9 +24,8 @@
     "tape": "^4.9.0"
   },
   "scripts": {
-    "build": "./node_modules/.bin/rollup -c",
-    "watch": "./node_modules/.bin/rollup -c -w",
-    "test": "tape -r babel-register ./test/**/**.js | faucet"
+    "build": "./node_modules/.bin/rollup -c ./rollup/config.es.js && ./node_modules/.bin/rollup -c ./rollup/config.umd.js",
+    "watch": "./node_modules/.bin/rollup -c -w ./rollup/config.umd.js"
   },
   "dependencies": {
     "fastdom": "^1.0.8"
