--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "aventador",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A framework for high performance web interactions",
   "main": "index.js",
   "repository": "git@github.com:julienetie/aventador.git",
   "author": "Julien Etienne <j8@protonmail.ch>",
   "license": "MIT",
-   "readme": "index.md",
+  "readme": "index.md",
+  "prepublishOnly": "node prepublish.js",
   "devDependencies": {
     "azar": "^0.0.2",
     "babel-core": "^6.26.3",
@@ -22,6 +23,7 @@
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-watch": "^4.3.1",
+    "rst2mdown": "^0.1.0",
     "tape": "^4.9.0"
   },
   "scripts": {
